# family-office

./: .env.example  .gitignore  .onboarding-state.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_NOTES.md  package.json  pyproject.toml  rbp-config.yaml  setup.sh
.beads/: issues.jsonl
.claude/: settings.json.bak
.claude/commands/: quick-plan.md
.claude/hooks/: skill-activation-prompt.ts
.claude/skills/: skill-rules.json
.rbp/: current-spec-bead
apps/plaid-dashboard/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  turbo.json
docs/: SETUP.md  TROUBLESHOOTING.md  codex-full-review-report.md  index.md  pre-codex-validation-report.md  required-csv-uploads.md  tools.md
docs/csv-mappings/: README.md  etrade-mapping.json  fidelity-mapping.json  generic-mapping-template.json  robinhood-mapping.json  schwab-mapping.json  tdameritrade-mapping.json  vanguard-mapping.json
fin-guru/: config.yaml
fin-guru/_module-installer/: install-module-config.yaml
fin-guru/agents/: builder.md  finance-orchestrator.md  market-researcher.md  quant-analyst.md  strategy-advisor.md
fin-guru/framework/: knowledge-base.yaml  tools-and-modes.yaml
fin-guru/tasks/: quantitative-analysis.md  research-workflow.md  strategy-integration.md
fin-guru/workflows/: workflow.yaml
scripts/: monte_carlo_excel_export.py  transaction_processor.py
scripts/google-sheets/: README.md
scripts/onboarding/: index.ts
scripts/qa/: pre-codex-validation.ts
scripts/rbp/: close-with-proof.sh  parse-spec-to-beads.sh  parse-story-to-beads.sh  prompt.md  ralph-execute.sh  ralph.sh  save-progress-to-beads.sh  sequencer.sh  show-active-task.sh  validate.sh
specs/: itc-risk-api-integration.md
specs/archive/: finance-guru-tui-dashboard.md  finance-guru-tui-v0.1-revised.md  finance-guru-tui-v0.2-enhancement-plan.md
src/: config.py
src/analysis/: itc_risk_cli.py  risk_metrics_cli.py
src/models/: __init__.py  dashboard_inputs.py  itc_risk_inputs.py  yaml_generation_inputs.py
src/strategies/: dividend_margin_monte_carlo.py
src/ui/: app.py
src/utils/: data_validator_cli.py  input_validation.py  input_validation_cli.py  (+5 more)
(+83 files in other folders)
